telepathy-qt4-yell 0.1.x
=========================

Enhancements:
 * Emit a signal when an account item is added to AccountsModel
 * Emit a signal on contact item when the caps get updated
 * Use Tp::AccountSet instead of Tp::AccountManager to monitor accounts in Tpy::AccountsModel

Fixes:
 * Report the connection status reason using the Connection object if possible
 * On connection invalidated, emit the connection status changed signal to make sure the account model item is updated
 * Add constructor to Tpy::ContactCapabilities so it can be really used
 * Revert returning UTF-8 for the contact alias and status messages strings
 * WARNING: optimization of flat model proxy, dataChanged signal is not hierarchical anymore after we found out it was quite expensive. You need to do explicit hierarchical changes.
 * Added hierarchicalDataChanged signal to Tpy::AccountsModel for explicit signalling of changes in account data affecting contacts data (expensive)
 * When setting status and statusMessage on Tpy::AccountsModelItem do not clear the presence type

telepathy-qt4-yell 0.1.6 (2011-06-06)
======================================

The "don't call on your model contacts unless necessary" release

Fixes:
 * Make the account model item use the status of the Connection object instead of the account one
 * Change the alias and statusMessage roles of the contact model item to return UTF-8 instead of QString
   have it display correctly in QML with extended characters

telepathy-qt4-yell 0.1.5 (2011-05-26)
======================================

The "shhh, contacts are coming in..." release.

Enhancements:
 * Added role to AccountsModel to get the state of the contact list

Fixes:
 * Fix crash when g_async_initable_new_finish returned error

telepathy-qt4-yell 0.1.4 (2011-05-04)
======================================

The "Aruba, one happy island" release.

Enhancements:
 * Implement removeRows method in AbstractConversationModel