@@ -5,6 +5,7 @@ Enhancements:
  * Emit a signal when an account item is added to AccountsModel
  * Emit a signal on contact item when the caps get updated
  * Use Tp::AccountSet instead of Tp::AccountManager to monitor accounts in Tpy::AccountsModel
+ * Add fileTransfers to Tpy::ContactCapabilities
 
 Fixes:
  * Report the connection status reason using the Connection object if possible
